--- a/app-react/src/App.css
+++ b/app-react/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  display: flex;
 }
 
 .App-logo {
@@ -35,4 +36,29 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+form {
+  min-width: 300px;
+  margin: 30px;
+  padding: 20px;
+  border: solid black 1px;
+}
+
+.transaction-history {
+  width: 100%;
+  margin: 30px;
+}
+
+.transaction {
+  border: solid black 1px;
+  margin: 30px;
+  padding: 20px;
+}
+
+input#amount {
+  width: 100%;
+}
+input#accountId {
+  width: 100%;
 }
